// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/import.vue { locale: "en" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">Import Scores</h1>
  <h2 id="eagate" class="subtitle">Import from e-amusement GATE</h2>
  <div class="content">
    <div class="field">
      <!---->
      <div class="field-body">
        <div class="field has-addons">
          <!---->
          <div class="control is-clearfix"><input type="text" autocomplete="on" readonly="readonly" class="input">
            <!---->
            <!---->
            <!---->
          </div> <button type="button" class="button"><span class="icon is-small"><i class="mdi mdi-content-copy"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <ol>
      <li><span>Regist your password for import at <a target="_blank">
            "User Settings" page
          </a>.</span></li>
      <li>Copy above text and add it for bookmarklet.</li>
      <li><span>Open <a href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_data_single.html" target="_blank">
            "Music List" page
          </a>.</span> <wbr> <strong>You need to subscribe "e-amusement Basic Course" to see scores.</strong></li>
      <li>Launch bookmarklet.</li>
      <li>Enter your ID and pass.</li>
    </ol>
  </div>
  <h2 id="skillAttack" class="subtitle">Import from Skill Attack</h2>
  <div class="content">
    <p>Import your scores from <a href="http://skillattack.com/sa4/" target="_blank">Skill Attack</a>.</p>
    <p>Please download <a href="http://skillattack.com/sa4/data/dancer/10000000/score_10000000.txt" target="_blank">
        Score Data
      </a> in advance, and upload here.</p>
    <div class="field file is-primary">
      <!----><label class="upload control file-label"><span class="file-cta"><span class="icon file-icon"><i class="mdi mdi-upload mdi-24px"></i></span> <span class="file-label">
            Select file
          </span></span><input type="file" accept=".txt"></label>
      <!---->
      <!---->
    </div>
    <div class="field">
      <!----><button type="button" disabled="disabled" class="button is-success">
        <!----><span>
        Submit
      </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
  </div>
</section>
`;

exports[`pages/import.vue { locale: "en" } snapshot test renders uploading state 1`] = `
<section class="section">
  <h1 class="title">Import Scores</h1>
  <h2 id="eagate" class="subtitle">Import from e-amusement GATE</h2>
  <div class="content">
    <div class="field">
      <!---->
      <div class="field-body">
        <div class="field has-addons">
          <!---->
          <div class="control is-clearfix"><input type="text" autocomplete="on" readonly="readonly" class="input">
            <!---->
            <!---->
            <!---->
          </div> <button type="button" class="button"><span class="icon is-small"><i class="mdi mdi-content-copy"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <ol>
      <li><span>Regist your password for import at <a target="_blank">
            "User Settings" page
          </a>.</span></li>
      <li>Copy above text and add it for bookmarklet.</li>
      <li><span>Open <a href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_data_single.html" target="_blank">
            "Music List" page
          </a>.</span> <wbr> <strong>You need to subscribe "e-amusement Basic Course" to see scores.</strong></li>
      <li>Launch bookmarklet.</li>
      <li>Enter your ID and pass.</li>
    </ol>
  </div>
  <h2 id="skillAttack" class="subtitle">Import from Skill Attack</h2>
  <div class="content">
    <p>Import your scores from <a href="http://skillattack.com/sa4/" target="_blank">Skill Attack</a>.</p>
    <p>Please download <a href="http://skillattack.com/sa4/data/dancer/10000000/score_10000000.txt" target="_blank">
        Score Data
      </a> in advance, and upload here.</p>
    <div class="field file is-primary has-name">
      <!---->
      <div class="field-body">
        <div class="field has-addons">
          <!----><label class="upload control file-label"><span class="file-cta"><span class="icon file-icon"><i class="mdi mdi-upload mdi-24px"></i></span> <span class="file-label">

          </span></span><input type="file" accept=".txt"></label> <button type="button" class="button"><span class="icon is-small"><i class="mdi mdi-window-close"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <div class="field">
      <!----><button type="button" class="button is-success is-loading">
        <!----><span>
        Submit
      </span>
        <!---->
      </button>
      <!---->
    </div>
    <div class="progress-wrapper"><progress max="20" class="progress is-success" value="7">7</progress>
      <p class="progress-value">
        Uploading: PARANOiA (7/20)
      </p>
    </div>
  </div>
</section>
`;

exports[`pages/import.vue { locale: "ja" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">スコアのインポート</h1>
  <h2 id="eagate" class="subtitle">e-amusementサイトからインポート</h2>
  <div class="content">
    <div class="field">
      <!---->
      <div class="field-body">
        <div class="field has-addons">
          <!---->
          <div class="control is-clearfix"><input type="text" autocomplete="on" readonly="readonly" class="input">
            <!---->
            <!---->
            <!---->
          </div> <button type="button" class="button"><span class="icon is-small"><i class="mdi mdi-content-copy"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <ol>
      <li><span><a target="_blank">
            「ユーザー設定」ページ
          </a>にて、インポート用のパスワードを登録します。</span></li>
      <li>上記のテキストをコピーして、ブックマークに登録します。</li>
      <li><span>公式サイトの<a href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_data_single.html" target="_blank">
            「楽曲データ一覧」ページ
          </a>を開きます。</span> <wbr> <strong>ベーシックコースへの加入が必要です。</strong></li>
      <li>登録したブックマークを開きます。</li>
      <li>ユーザーID、パスワードを入力します。</li>
    </ol>
  </div>
  <h2 id="skillAttack" class="subtitle">Skill Attackからインポート</h2>
  <div class="content">
    <p><a href="http://skillattack.com/sa4/" target="_blank">Skill Attack</a>より、スコアをインポートします。</p>
    <p>事前に<a href="http://skillattack.com/sa4/data/dancer/10000000/score_10000000.txt" target="_blank">
        スコアデータ一覧
      </a>をダウンロードして、下記よりアップロードを実行してください。</p>
    <div class="field file is-primary">
      <!----><label class="upload control file-label"><span class="file-cta"><span class="icon file-icon"><i class="mdi mdi-upload mdi-24px"></i></span> <span class="file-label">
            ファイルを選択
          </span></span><input type="file" accept=".txt"></label>
      <!---->
      <!---->
    </div>
    <div class="field">
      <!----><button type="button" disabled="disabled" class="button is-success">
        <!----><span>
        登録
      </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
  </div>
</section>
`;

exports[`pages/import.vue { locale: "ja" } snapshot test renders uploading state 1`] = `
<section class="section">
  <h1 class="title">スコアのインポート</h1>
  <h2 id="eagate" class="subtitle">e-amusementサイトからインポート</h2>
  <div class="content">
    <div class="field">
      <!---->
      <div class="field-body">
        <div class="field has-addons">
          <!---->
          <div class="control is-clearfix"><input type="text" autocomplete="on" readonly="readonly" class="input">
            <!---->
            <!---->
            <!---->
          </div> <button type="button" class="button"><span class="icon is-small"><i class="mdi mdi-content-copy"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <ol>
      <li><span><a target="_blank">
            「ユーザー設定」ページ
          </a>にて、インポート用のパスワードを登録します。</span></li>
      <li>上記のテキストをコピーして、ブックマークに登録します。</li>
      <li><span>公式サイトの<a href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_data_single.html" target="_blank">
            「楽曲データ一覧」ページ
          </a>を開きます。</span> <wbr> <strong>ベーシックコースへの加入が必要です。</strong></li>
      <li>登録したブックマークを開きます。</li>
      <li>ユーザーID、パスワードを入力します。</li>
    </ol>
  </div>
  <h2 id="skillAttack" class="subtitle">Skill Attackからインポート</h2>
  <div class="content">
    <p><a href="http://skillattack.com/sa4/" target="_blank">Skill Attack</a>より、スコアをインポートします。</p>
    <p>事前に<a href="http://skillattack.com/sa4/data/dancer/10000000/score_10000000.txt" target="_blank">
        スコアデータ一覧
      </a>をダウンロードして、下記よりアップロードを実行してください。</p>
    <div class="field file is-primary has-name">
      <!---->
      <div class="field-body">
        <div class="field has-addons">
          <!----><label class="upload control file-label"><span class="file-cta"><span class="icon file-icon"><i class="mdi mdi-upload mdi-24px"></i></span> <span class="file-label">

          </span></span><input type="file" accept=".txt"></label> <button type="button" class="button"><span class="icon is-small"><i class="mdi mdi-window-close"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <div class="field">
      <!----><button type="button" class="button is-success is-loading">
        <!----><span>
        登録
      </span>
        <!---->
      </button>
      <!---->
    </div>
    <div class="progress-wrapper"><progress max="20" class="progress is-success" value="7">7</progress>
      <p class="progress-value">
        登録中: PARANOiA (7/20)
      </p>
    </div>
  </div>
</section>
`;
